# SuoFish-backend

./: .dockerignore  .env_example  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
charoma_data/: chroma.sqlite3
docs/: database-design.md  refactor-plan.md  schema-design-guide.md  schema-migration-guide.md  schema-quick-reference.md  schema-refactor-checklist.md  schema-refactor-summary.md
src/: main.py
src/ai/: __init__.py
src/ai/agent/: __init__.py  base.py
src/ai/embedding/: __init__.py  base.py
src/ai/llm/: __init__.py  base.py  chat_model.py
src/ai/rag/: __init__.py  chunking.py  document_parser.py  embedding.py  retriever.py  vector_store.py
src/api/: deps.py
src/api/v1/: api.py
src/core/: config.py
src/core/config/: __init__.py  ai.py  auth.py  cors.py  database.py  (+1 more)
src/crud/: conversation.py  conversation_file.py  conversation_log.py  knowledge_base.py  knowledge_base_file.py  message.py  model.py  user.py
src/curd/: conversation.py  messages.py  user.py
src/db/: session.py
src/llm/: llm_service.py
src/prompt/: __init__.py  chat.py  summary.py
src/schemas/: api_response.py  auth.py  chat.py  conversation.py  conversation_log.py  knowledge_base.py  llm_config.py  message.py  model_config.py  sign.py  user.py
src/services/: __init__.py  chat_service.py  conversation_file_service.py  file_service.py  knowledge_base_file_service.py  rag_service.py
src/shcemas/: api_response.py  chat.py  llm_config.py  sign.py
src/utils/: authentic.py  file_storage.py  file_validator.py  micorsoft_office_reader.py
(+27 files in other folders)
